2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext.addin.xml: Removed the CommandService class.
	  Everything is done directly with CommandManager. Moved all extension
	  node types to MD.Components.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.Gettext.POEditorWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.Translator.LanguageChooserDialog.cs,
	  gtk-gui/MonoDevelop.Gettext.TranslationProjectOptionsDialog.cs,
	  gtk-gui/gui.stetic, MonoDevelop.Gettext.addin.xml,
	  MonoDevelop.Gettext.mdp, Makefile.am: Reorganized the extension point
	  hierarchy. Embedded all add-in manifests as resources.

2007-08-09  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.addin.xml,
	  MonoDevelop.Gettext.NodeBuilders/TranslationProjectNodeBuilder.cs,
	  MonoDevelop.Gettext/PropertyProvider.cs,
	  MonoDevelop.Gettext/TranslationProject.cs: Fixed bug 82334: Gettext
	  addin: can't choose which files to translate. It's now possible to
	  choose, if a file can be translated in the file properties. 

2007-08-09  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.Gettext.Translator.LanguageChooserDialog.cs:
	  Fixed Bug 82341: Gettext addin: Language selection combo too big.

2007-08-08  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.Editor/POEditorWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.POEditorWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.Translator.LanguageChooserDialog.cs,
	  gtk-gui/MonoDevelop.Gettext.Editor.CatalogHeadersWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.TranslationProjectOptionsDialog.cs:
	  Fixed 82337: Gettext addin: usability issues in the PO editor

2007-08-08  Mike Krüger <mkrueger@novell.com> 
   * MonoDevelop.Gettext/TranslationProjectOptionsDialog.cs: Removed
   some debug code.

2007-08-08  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.Gettext.TranslationProjectOptionsDialog.cs,
	  MonoDevelop.Gettext/TranslationProjectOptionsDialog.cs: Fixed