@@ -54,6 +54,9 @@
     <File name="./MonoDevelop.Gettext/IsoCodes.cs" subtype="Code" buildaction="Compile" />
     <File name="./Makefile.am" subtype="Code" buildaction="Nothing" />
     <File name="./MonoDevelop.Gettext/PropertyProvider.cs" subtype="Code" buildaction="Compile" />
+    <File name="./MonoDevelop.Gettext/GettextFeature.cs" subtype="Code" buildaction="Compile" />
+    <File name="./MonoDevelop.Gettext/GettextFeatureWidget.cs" subtype="Code" buildaction="Compile" />
+    <File name="./gtk-gui/MonoDevelop.Gettext.GettextFeatureWidget.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -87,6 +90,7 @@
     <ExportedWidgets>
       <Widget>MonoDevelop.Gettext.POEditorWidget</Widget>
       <Widget>MonoDevelop.Gettext.EntrySelectionTree</Widget>
+      <Widget>MonoDevelop.Gettext.GettextFeatureWidget</Widget>
     </ExportedWidgets>
   </GtkDesignInfo>
   <Deployment.LinuxDeployData scriptName="monodevelop.gettext" generatePcFile="False" />
