@@ -1,3 +1,12 @@
+2007-08-09  Mike Krüger <mkrueger@novell.com> 
+
+	* gtk-gui/MonoDevelop.Gettext.GettextFeatureWidget.cs,
+	  gtk-gui/MonoDevelop.Gettext.Translator.LanguageChooserDialog.cs,
+	  MonoDevelop.Gettext/GettextFeature.cs,
+	  MonoDevelop.Gettext/GettextFeatureWidget.cs: Fixed 82340: Gettext
+	  addin: translation project creation should be available as a
+	  'project feature'.
+
 2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Gettext.addin.xml: Removed the CommandService class.
